tests/semantic/invalid/12_r3_method_duplicate_params.hulk
class C {
    bad(a, a) -> a;
}

print(0);
